Fixed z-index issue preventing clicks on scrollbar

--- a/wcfsetup/install/files/style/dropdown.less
+++ b/wcfsetup/install/files/style/dropdown.less
@@ -314,6 +314,17 @@
 		border-width: 1px 0;
 		max-height: 300px;
 		
+		&.ps-container {
+			> .interactiveDropdownItems {
+				position: relative;
+				z-index: 100;
+			}
+			
+			> .ps-scrollbar-y-rail {
+				z-index: 200;
+			}
+		}
+		
 		> .interactiveDropdownItems {
 			> li {
 				background-color: @wcfDropdownBackgroundColor;
